--- a/pingpong.css
+++ b/pingpong.css
@@ -23,10 +23,10 @@ body{
     position: relative;
     padding: 15px;
 }
-#rod-1-score{
+#rod-1-title{
     left: -25%;
 }
-#rod-2-score{
+#rod-2-title{
     left: 25%;
 }
 #game-window{
@@ -42,17 +42,24 @@ body{
     height: 100px;
     background-color: white;
     position: fixed;
-    top: 55%;
 }
 #rod-2{
-    right: 20.3%;
+    left: 79%;
 }
 #ball{
     width: 20px;
     height: 20px;
     background-color:white;
     position: fixed;
-    top: 60%;
-    left: 48%;
     border-radius: 50%;
+}
+
+#reset{
+    border: none;
+    cursor: pointer;
+    font-size: 1.2rem;
+    font-weight: bold;
+    border-radius: 15%;
+    padding: 10px;
+    box-shadow: 0px 5px 40px rgb(202, 16, 16);
 }
